# vaillant-eebus

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  design.md  hacs.json  proposal.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/vaillant_ebus/: __init__.py  binary_sensor.py  calendar.py  climate.py  config_flow.py  const.py  coordinator.py  date.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py  water_heater.py
custom_components/vaillant_ebus/backend/: __init__.py  base.py  entity_factory.py  mapping.py  models.py  tcp.py
custom_components/vaillant_ebus/translations/: en.json
custom_components/vaillant_eebus/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py
custom_components/vaillant_eebus/translations/: en.json
docs/: architecture.md  developer.md  setup.md  troubleshooting.md
examples/: basic_dashboard.yaml
openspec/changes/ebusd-tcp-backend/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-read-only/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-read-only/specs/ha-integration/: spec.md
openspec/changes/phase-1-read-only/specs/mdns-discovery/: spec.md
openspec/changes/phase-1-read-only/specs/measurement-reading/: spec.md
tests/: test_compressor_power.py
vaillant/: certificate.py  client.py  discovery.py  measurement.py  ship.py  spine.py
(+1 files in other folders)
