[project]
name = "vaillant-ebus"
version = "1.0.5b1"
description = "Home Assistant integration for Vaillant heat pumps via ebusd TCP"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Mark Bovee" }]

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [".git", ".venv", "venv", "__pycache__", "scripts/standalone.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.14"
exclude = [".git", ".venv", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
